--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
         <title>Conchord UI</title>
     </head>
     <body>
-        <script src="app.js" type="text/javascript"></script>
+        <script src="index.js" type="text/javascript"></script>
     </body>
 </html>
 
