--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf8">
         <title>Conchord UI</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
     <body>
         <script src="js/index.js" type="text/javascript"></script>
