show/hide pages based on route

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html>
+    <head>
+        <style> .hidden { display: none; } </style>
+    </head>
     <body>
         <script src="/app.js"></script>
     </body>
