--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <style> .hidden { display: none; } </style>
     </head>
     <body>
+        <div id="app"></div>
         <script src="/app.js"></script>
     </body>
 </html>
