--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <style> .hidden { display: none; } </style>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div id="app"></div>
